--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,14 +3,14 @@
     <a href={{ "/" | relative_url }}>
       <div class="site-name">
         <div><img class="nav-site-image" src="{{ site.author.avatar }}" alt="me"></div>
-        <div class="small-title">George Kaye</div>
+        <div class="nav-bar-title">George Kaye</div>
       </div>
     </a>
   </div>
   <div class="middle-nav">
     <div class="mobile-site-image"><a href={{ "/" | relative_url }}><img class="nav-site-image"
           src="{{ site.author.avatar }}" alt="me"></a></div>
-    <div class="small-page-title">
+    <div class="nav-bar-page-title">
       <a href="#top">
         {% if page.url == "/" | relative_url %}
         Home
