Made a change to how the nav bar displays

--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -98,8 +98,7 @@ html {
 
 .nav-bar-page-title a {
   color: #ff79c6;
-  margin: 10px;
-  font-size: 22pt;
+  font-size: 2em;
   font-weight: bold;
 }
 
