--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,7 +24,7 @@
   <meta name="description" content="{{ site.meta }}">
 
   <!-- Icons -->
-  <link rel="icon" href="{{ site.baseurl }}/favicon.png" type="image/png" />
+  <link rel="icon" href="{{ site.baseurl }}/favicon.ico" type="image/ico" />
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
