--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -230,7 +230,7 @@ html {
 
 @media (min-width: 32em) {
   .content {
-    max-width: 48em;
+    max-width: 54em;
     margin-left: auto;
     margin-right: auto;
   }
@@ -244,9 +244,6 @@ html {
 /* List items */
 .list-item-heading {
   margin: 0px;
-  text-align: center;
 }
 
-.list-item {
-  text-align: center;
-}
+.list-item {}
