Got rid of my big face rest in peace

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
   </div>
   <div class="title-bar">
     <div class="title-bar-item">
-      <img class="site-image" src="{{ site.author.avatar }}" alt="me" width="100px" height="100px">
+      <!--<img class="site-image" src="{{ site.author.avatar }}" alt="me" width="100px" height="100px">-->
     </div>
     <div class="title-bar-item title">
       {% if page.url == "/" | relative_url %}
