--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,9 +6,12 @@
 <body>
 
   {% include nav.html %}
+  <div class="spacer">
+    &nbsp;
+  </div>
   {% include header.html %}
 
-  <div id="text" class="content container">
+  <div id="text" class="content container wide">
     {{ content }}
   </div>
 
