Made homepage look a bit better

--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -344,7 +344,7 @@ tbody tr:nth-child(even) td {
  */
 
 .container {
-  max-width: 38rem;
+  /*max-width: 38rem;*/
   padding-left: 1rem;
   padding-right: 1rem;
   margin-left: auto;
