--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,8 @@
 <div class="header-bar">
-  <div class="mobile-title-image-bar">
-    <img class="mobile-image" src="{{ site.author.avatar }}" alt="me" width="100px" height="100px">
-  </div>
   <div class="title-bar">
-    <div class="title-bar-item">
-      <!--<img class="site-image" src="{{ site.author.avatar }}" alt="me" width="100px" height="100px">-->
-    </div>
     <div class="title-bar-item title">
       {% if page.url == "/" | relative_url %}
-      {{ site.title }}
+      Hello!
       {% else %}
       {{ page.title }}
       {% endif %}
