--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -1,16 +1,11 @@
 html {
   font-family: "PT Sans", Helvetica, Arial, sans-serif;
+  font-size: 20px;
 }
 
-/*@media (max-width: 48em) {
+@media (max-width: 52em) {
   html {
     font-size: 16px;
-  }
-}*/
-
-@media (min-width: 48em) {
-  html {
-    font-size: 20px;
   }
 }
 
@@ -43,16 +38,15 @@ html {
   width: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
   position: fixed;
   z-index: 999;
   border-bottom: 2px solid #282a36;
 }
 
 
-@media (min-width: 50em) {
+@media (min-width: 54em) {
   .wide {
-    max-width: 50em;
+    max-width: 54em;
   }
 }
 
@@ -86,23 +80,14 @@ html {
 .nav-site-image {
   height: 50px;
   width: 50px;
-  margin-right: 10px;
+  margin-right: 0.75em;
 }
 
 .nav-bar-title {
-  font-size: 22pt;
+  font-size: 2em;
   font-weight: bold;
   line-height: 1;
   text-align: center;
-}
-
-
-@media (max-width: 48em) {
-
-  .left-nav {
-    display: none;
-  }
-
 }
 
 .site-name {
@@ -114,7 +99,7 @@ html {
 /* Middle space for page title
  */
 
-@media (max-width: 48em) {
+@media (max-width: 54em) {
   .middle-nav {
     display: none;
   }
@@ -144,7 +129,7 @@ html {
   margin-right: 5px;
 }
 
-@media (max-width: 48em) {
+@media (max-width: 72em) {
   .right-nav {
     display: none;
   }
@@ -168,14 +153,12 @@ html {
   flex-direction: row-reverse;
 }
 
-@media (min-width:48em) {
-  .mobile-site-image {
-    display: none;
-  }
+.mobile-site-image {
+  display: none;
+}
 
-  .mobile-nav {
-    display: none;
-  }
+.mobile-nav {
+  display: none;
 }
 
 
@@ -220,13 +203,13 @@ html {
   max-width: 100%;
 }
 
-@media (min-width: 32em) {
+@media (min-width: 54em) {
   .mobile-image {
     display: none;
   }
 }
 
-@media (max-width: 32em) {
+@media (max-width: 54em) {
 
   .title-bar {
     padding: 1em;
@@ -258,11 +241,13 @@ html {
   padding-bottom: 4rem;
 }
 
-@media (min-width: 32em) {
-  .content {
-    margin-left: auto;
-    margin-right: auto;
+@media (max-width: 72em) {
+
+  .content,
+  .nav-bar-content {
+    max-width: 44em;
   }
+
 }
 
 .centre-image {
