Put some things on the front page again

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -17,6 +17,7 @@
       <div class="nav-link"><a href="/blog">Blog</a></div>
       {% if page.title == "Home" %}
       <div class="nav-link home-link">•</div>
+      <div class="nav-link home-link"><a href="#misc">Misc</a></div>
       <div class="nav-link home-link"><a href="#teaching">Teaching</a></div>
       <div class="nav-link home-link"><a href="#visits">Visits</a></div>
       <div class="nav-link home-link"><a href="#projects">Projects</a></div>
