--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -48,14 +48,12 @@ body {
 }
 
 body {
-  color: #d6d3cd;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
 }
 
 /* No `:visited` state is required by default (browsers will use `a`) */
 a {
-  color: #8be9fd;
   text-decoration: none;
 }
 
@@ -79,13 +77,11 @@ h6 {
   margin-bottom: .5rem;
   font-weight: bold;
   line-height: 1.25;
-  color: #d6d3cd;
   text-rendering: optimizeLegibility;
 }
 
 
 h1 {
-  color: #ff79c6;
   font-size: 3rem;
 }
 
@@ -170,8 +166,6 @@ pre {
 code {
   padding: .25em .5em;
   font-size: 85%;
-  color: #f8f8f2;
-  background-color: #383a59;
   border-radius: 3px;
 }
 
@@ -186,7 +180,6 @@ pre {
   white-space: pre-wrap;
   word-break: break-all;
   word-wrap: break-word;
-  background-color: #383a59;
 }
 
 pre code {
@@ -292,7 +285,7 @@ th {
 }
 
 tbody tr:nth-child(even) td {
-  background-color: #383a59;
+  background-color: #828394;
 }
 
 
@@ -337,37 +330,6 @@ tbody tr:nth-child(even) td {
   margin-left: auto;
   margin-right: auto;
 }
-
-
-/*
- * Masthead
- *
- * Super small header above the content for site name and short description.
- */
-
-.masthead {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  margin-bottom: 3rem;
-}
-
-.masthead-title {
-  margin-top: 0;
-  margin-bottom: 0;
-  color: #505050;
-}
-
-.masthead-title a {
-  color: #505050;
-}
-
-.masthead-title small {
-  font-size: 75%;
-  font-weight: 400;
-  color: #c0c0c0;
-  letter-spacing: 0;
-}
-
 
 /*
  * Posts and pages
@@ -487,46 +449,4 @@ a.pagination-item:hover {
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
   }
-}
-
-
-/* custom */
-.small-scenario {
-  margin-top: 5px;
-  margin-right: 5px;
-  width: 100%;
-}
-
-@media only screen and (min-width: 768px) {
-  .small-scenario {
-    width: 48%;
-  }
-}
-
-.definition-header {
-  background-color: #383a59;
-  border-radius: 5px;
-  padding: 10px;
-  margin-bottom: 10px;
-  font-size: 110%;
-}
-
-.definition-body {
-  background-color: #383a59;
-  border-radius: 5px;
-  padding: 10px;
-  margin-bottom: 20px;
-}
-
-.definition-body-bullets {
-  background-color: #383a59;
-  border-radius: 5px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-
-.top-link {
-  text-align: center;
-  font-weight: bold;
-  margin: 25px;
 }
