--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -77,6 +77,7 @@ a {
   justify-content: center;
   position: fixed;
   z-index: 999;
+  border-top: 2px solid #282a36;
   border-bottom: 2px solid #282a36;
 }
 
@@ -103,6 +104,13 @@ a {
   margin-left: 10px;
   margin-right: 10px;
   font-weight: bold;
+  font-size: 1em;
+}
+
+@media (max-width: 60em) {
+  .nav-link {
+    font-size: 1.5em;
+  }
 }
 
 /* Left space, for site name and my face 
@@ -168,11 +176,13 @@ a {
 }
 
 @media (max-width: 72em) {
-  .right-nav {
-    /*display: none;*/
-  }
-
   .home-link {
+    display: none;
+  }
+}
+
+@media (max-width: 36em) {
+  .right-nav {
     display: none;
   }
 }
