--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -22,6 +22,7 @@ html {
   background-color: #282a36;
 }
 
+
 /* Light */
 .nav-bar,
 .header-bar,
@@ -31,10 +32,18 @@ pre {
   background-color: #383a59;
 }
 
+/* cyan text */
+
+a {
+  color: #8be9fd;
+}
+
+
 /* Green text */
 h2,
 h3,
-.definition-header {
+.definition-header,
+.post-subtitle {
   color: #50fa7b;
 }
 
@@ -42,8 +51,7 @@ h3,
 h1,
 .nav-bar-title,
 .page-title,
-.post-title,
-.post-title a {
+.post-title {
   color: #ff79c6;
 }
 
@@ -56,12 +64,6 @@ h6,
 .title,
 code {
   color: #f2f2f2;
-}
-
-/* cyan text */
-
-a {
-  color: #8be9fd;
 }
 
 /* Nav bar 
@@ -284,7 +286,6 @@ a {
 }
 
 
-
 /* Container */
 
 .content {
@@ -318,6 +319,24 @@ a {
     width: 48%;
   }
 }
+
+/* Blog */
+
+.post-title {
+  font-size: 2.5em;
+  font-weight: bold;
+}
+
+.post-subtitle {
+  font-size: 2em;
+  margin-right: 0.2em;
+}
+
+.post-date {
+  color: #9a9a9a;
+  font-weight: bold;
+}
+
 
 /* Papers */
 
