Put the date into the header for posts

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,4 +11,5 @@
     <div class="subtitle">{{ page.subtitle }}</div>
   </div>
   <div class="tagline">{{ page.tagline }}</div>
+  <time class="header-date">{{ page.date | date_to_string }}</time>
 </div>
