--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,11 +14,14 @@ layout: default
   <ul class="related-posts">
     {% for post in site.related_posts limit:3 %}
     <li>
-      <h3>
-        <a href="{{ post.url }}">
-          {{ post.title }} <br>
-          <small>{{ post.date | date_to_string }}</small>
-        </a>
+      <a href="{{ post.url }}">
+        <span class="post-title-small">
+          {{ post.title }}
+        </span>
+        <span class="post-subtitle-small">{{ post.subtitle }}</span>
+        <span><time datetime="{{ post.date | date_to_xmlschema }}"
+            class="post-date">{{ post.date | date_to_string }}</time></span>
+      </a>
       </h3>
     </li>
     {% endfor %}
