Experimenting with a mobile nav bar

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -25,4 +25,8 @@
       {% endif %}
     </div>
   </div>
+  <div class="mobile-nav">
+    <div class="nav-link"><a href="https://github.com/georgejkaye">GitHub</a></div>
+    <div class="nav-link"><a href="/blog">Blog</a></div>
+  </div>
 </div>
