Added some fancy effects and abstract

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,8 +19,8 @@
       <div class="nav-link home-link">•</div>
       <div class="nav-link home-link"><a href="#misc">Misc</a></div>
       <div class="nav-link home-link"><a href="#teaching">Teaching</a></div>
-      <div class="nav-link home-link"><a href="#visits">Visits</a></div>
-      <div class="nav-link home-link"><a href="#projects">Projects</a></div>
+      <div class="nav-link home-link"><a href="#talks">Talks</a></div>
+      <div class="nav-link home-link"><a href="#publications">Publications</a></div>
       <div class="nav-link home-link"><a href="#about-me">About</a></div>
       {% endif %}
     </div>
