Trying to add train nav link

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -23,6 +23,9 @@
       <div class="nav-link home-link"><a href="#publications">Publications</a></div>
       <div class="nav-link home-link"><a href="#about-me">About</a></div>
       {% endif %}
+      {% if page.type == "trains" %}
+      <div class="nav-link home-link"><a href="/trains">Trains</a></div>
+      {% endif %}
     </div>
   </div>
   <div class="mobile-nav">
