--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,5 +11,18 @@
     <div class="subtitle">{{ page.subtitle }}</div>
   </div>
   <div class="tagline">{{ page.tagline }}</div>
-  <time class="header-date">{{ page.date | date_to_string }}</time>
+  {% if page.date %}
+  <div class="header-date post-info">
+    <time class="header-date">{{ page.date | date_to_string }}</time>
+  </div>
+  {% endif %}
+  {% if page.tags.size > 0 %}
+    <div class="post-info">
+      {% for tag in page.tags %}
+        <div class="post-tag"> 
+          {{ tag }}
+        </div>
+      {% endfor %}
+    </div>
+  {% endif %}
 </div>
