--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,8 +19,10 @@ layout: default
           {{ post.title }}
         </span>
         <span class="post-subtitle-small">{{ post.subtitle }}</span>
-        <span><time datetime="{{ post.date | date_to_xmlschema }}"
-            class="post-date">{{ post.date | date_to_string }}</time></span>
+        <span>
+          <time datetime="{{ post.date | date_to_xmlschema }}"
+            class="post-date">{{ post.date | date_to_string }}</time>
+        </span>
       </a>
       </h3>
     </li>
