Tags spill onto a new line if necessary

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -12,7 +12,7 @@
           </div>
         </a>
     </div>
-    <div class="right-nav">
+    <div class="desktop right-nav">
       <div class="nav-link"><a href="https://github.com/georgejkaye">GitHub</a></div>
       <div class="nav-link"><a href="/blog">Blog</a></div>
       {% if page.title == "Home" %}
@@ -28,7 +28,7 @@
       {% endif %}
     </div>
   </div>
-  <div class="mobile-nav">
+  <div class="mobile mobile-nav">
     <div class="nav-link"><a href="https://github.com/georgejkaye">GitHub</a></div>
     <div class="nav-link"><a href="/blog">Blog</a></div>
   </div>
