--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,9 +1,9 @@
 <head>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="{{ "/public/css/poole.css" | relative_url }}">
-  <link rel="stylesheet" href="{{ "/public/css/hyde.css" | relative_url }}">
-  <link rel="stylesheet" href="{{ "/public/css/syntax.css" | relative_url }}">
+  <link rel="stylesheet" href="/public/css/poole.css">
+  <link rel="stylesheet" href="/public/css/hyde.css">
+  <link rel="stylesheet" href="/public/css/syntax.css">
 
 
   <link href="http://gmpg.org/xfn/11" rel="profile">
