Fixed header title link

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,7 +4,7 @@
       {% if page.title == "Home" %}
       <a href="#top">
         {% else %}
-        <a href={{ "/" | relative_url }}>
+        <a href="/">
           {% endif %}
           <div class=" site-name">
             <div><img class="nav-site-image" src="{{ site.author.avatar }}" alt="me"></div>
