Made blog look a bit nicer

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="post">
 
-  <p><img class="post-img" src={{ page.image }} alt={{ page.alttext }}></p>
+  <p><img class="main-post-img" src={{ page.image }} alt={{ page.alttext }}></p>
 
   {{ content }}
 </div>
