--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -64,7 +64,7 @@ h1,
   color: #ff79c6;
 }
 
-/* white (ish */
+/* white (ish) */
 
 body,
 h4,
@@ -346,6 +346,26 @@ code {
 
 /* Blog */
 
+.post-preview {
+  display: flex;
+  flex-direction: row;
+}
+
+.post-date {
+  margin-right: 10px;
+}
+
+.post-img {
+  width: 30em;
+  margin-right: 25px;
+}
+
+@media (max-width: 52em) {
+  .post-img {
+    width: 50vw;
+  }
+}
+
 .post-title {
   font-size: 2.5em;
   font-weight: bold;
@@ -371,15 +391,16 @@ code {
   flex-direction: row;
   color: #9a9a9a;
   font-weight: bold;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .post-tag {
   margin-left: 5px;
-  padding: 0 5px;
+  padding: 0 7px;
   background-color: #f2f2f2;
   border-radius: 5px;
   color: #000000;
+
 }
 
 .post-tagline {
