Made the pictures page a bit easier on the eye

--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -490,3 +490,9 @@ code {
     display: none;
   }
 }
+
+/* pictures page table */
+
+.pictures-table tr:nth-child(2n) td {
+  background-color: transparent;
+}
