--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,3 +29,6 @@ layout: default
     {% endfor %}
   </ul>
 </div>
+{% if page.disclaimer %} 
+<div class="footnote">{{ page.disclaimer }}</div>
+{% endif %}
