Made blog post descriptions spill onto new line on mobile

--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -361,8 +361,12 @@ code {
 }
 
 @media (max-width: 52em) {
+  .post-preview {
+    flex-direction: column;
+  }
+
   .post-img {
-    width: 50vw;
+    width: 100%;
   }
 }
 
