Fixed the problem that Todd had because he was jealous

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -20,7 +20,7 @@
       <div class="nav-link home-link"><a href="#misc">Misc</a></div>
       <div class="nav-link home-link"><a href="#teaching">Teaching</a></div>
       <div class="nav-link home-link"><a href="#talks">Talks</a></div>
-      <div class="nav-link home-link"><a href="#publications">Publications</a></div>
+      <div class="nav-link home-link"><a href="#papers">Papers</a></div>
       <div class="nav-link home-link"><a href="#about-me">About</a></div>
       {% endif %}
       {% if page.type == "trains" %}
