--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -1,5 +1,5 @@
 html {
-  font-family: "PT Sans", Helvetica, Arial, sans-serif;
+  font-family: "Lato", Helvetica, Arial, sans-serif;
   font-size: 20px;
   line-height: 1.5;
 }
