--- a/src/includes/components/head.liquid
+++ b/src/includes/components/head.liquid
@@ -1,18 +1,19 @@
 <head>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="css/styles.css" />
-  <link rel="stylesheet" href="css/papers.css" />
-  <link rel="stylesheet" href="css/nav.css" />
+  <link rel="stylesheet" href="css/core.css" />
+  <link rel="stylesheet" href="css/index.css" />
+  <link rel="stylesheet" href="css/header.css" />
+  <link rel="stylesheet" href="css/syntax.css" />
 
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
   <title>
-    {% if page.title == "Home" %}
+    {% if title == "Home" %}
     {{ site.title }} &middot; {{ site.tagline }}
     {% else %}
-    {{ page.title }} &middot; {{ site.title }}
+    {{ title }} &middot; {{ site.title }}
     {% endif %}
   </title>
 
