--- a/src/includes/index/intro.liquid
+++ b/src/includes/index/intro.liquid
@@ -1,4 +1,5 @@
 <p>
+    <img class="profile-picture" src={{ people.me.picture }} />
     Hello! I’m George, a PhD student researcher at the University of Birmingham, under the supervision of <a
         href={{ people.dan.web }} title="Dan Ghica's personal webpage">
         Dan Ghica
