--- a/sass/colours.scss
+++ b/sass/colours.scss
@@ -1,9 +1,13 @@
 $background: #282a36;
 $foreground: #f2f2f2;
 $accent: #383a59;
-
-$green: #50fa7b;
-$pink:#ff79c6;
+$comment: #6272a4;
 $cyan: #8be9fd;
+$green: #50fa7b;
+$orange: #ffb86c;
+$pink:#ff79c6;
+$purple: #bd93f9;
+$red: #ff5555;
+$yellow: #f1fa8c;
 
 $subtitle:rgba(255, 255, 255, .5);
