--- a/sass/pages.scss
+++ b/sass/pages.scss
@@ -1,3 +1,22 @@
+// Pictures
+
+.picture-block {
+    display: flex;
+}
+
+.picture-picture {
+    flex: 1;
+    padding: 0 10px;
+}
+
+.picture-caption {
+    width: 30%;
+}
+
+img {
+    width: 100%;
+}
+
 // Stations
 
 .stations {
